--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">azimutlab</string>
+    <string name="no_network_available">No network available, please check your WiFi or Data connection</string>
+    <string name="check_connected_wifi">No internet available, please check your connected WIFi or Data</string>
+    <string name="no_internet_toast">No internet!!</string>
 </resources>
